test/asm/label-outside-section.err
error: label-outside-section.asm(1):
    Label "bad" created outside of a SECTION
Assembly aborted with 1 error!
